kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artacademy
  labels:
    name: artacademy
    managed-by: kubectl
